# icode-skill

./: .gitignore  README.en.md  README.md  SKILL.md
demo/: Makefile  calc.c  calc.h  main.c
mcp/vision-bridge/: .gitignore  README.md  config.example.json  install.sh  pyproject.toml  server.py  uninstall.sh
mcp/vision-bridge/providers/: base.py  local_ocr.py  openai_compat.py
mcp/vision-bridge/scripts/: register_mcp.py
references/: adversarial.md  anti_laziness.md  dir_and_metadata.md  doc_template.md  thinking.md
steps/: 00_init.md  01_plan.md  02_review.md  03_merge.md  04_code.md  05_deepcheck.md  06_audit.md  07_readme.md  doc.md  fast.md  log.md  status.md
tools/tb/: README.md  config.example.json
tools/tb/scripts/: tb_cookie.py  tb_pull.py
