[project]
name = "vision-bridge"
version = "0.1.0"
description = "vision-bridge MCP server — 可选视觉理解增强 for icode-skill"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "providers/*.py"]
